// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login/> should enable login button when both text inputs are filled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -270,10 +270,11 @@
                    },
                  ]
                }
                textContentType=\\"emailAddress\\"
                underlineColorAndroid=\\"transparent\\"
+               value=\\"email@gmail.com\\"
              />
            </View>
          </View>
          <View
            numberOfSpaces={6}
@@ -383,10 +384,11 @@
                    },
                  ]
                }
                textContentType=\\"password\\"
                underlineColorAndroid=\\"transparent\\"
+               value=\\"mypassword\\"
              />
              <View
                accessible={true}
                focusable={true}
                onClick={[Function onClick]}
@@ -482,22 +484,22 @@
              ]
            }
          />
          <View
            accessible={true}
-           focusable={false}
+           focusable={true}
            onClick={[Function onClick]}
            onResponderGrant={[Function onResponderGrant]}
            onResponderMove={[Function onResponderMove]}
            onResponderRelease={[Function onResponderRelease]}
            onResponderTerminate={[Function onResponderTerminate]}
            onResponderTerminationRequest={[Function onResponderTerminationRequest]}
            onStartShouldSetResponder={[Function onStartShouldSetResponder]}
            style={
              Object {
                \\"alignItems\\": \\"center\\",
-               \\"backgroundColor\\": \\"#f5f5f5\\",
+               \\"backgroundColor\\": \\"#eb0055\\",
                \\"borderRadius\\": 24,
                \\"borderWidth\\": 0,
                \\"flexDirection\\": \\"row\\",
                \\"height\\": 40,
                \\"justifyContent\\": \\"center\\",
@@ -516,21 +518,21 @@
              adjustsFontSizeToFit={false}
              numberOfLines={1}
              style={
                Array [
                  Object {
-                   \\"color\\": \\"#626262\\",
+                   \\"color\\": \\"#ffffff\\",
                    \\"fontFamily\\": \\"Montserrat-Bold\\",
                    \\"fontSize\\": 15,
                    \\"lineHeight\\": 20,
                    \\"marginLeft\\": 5,
                    \\"maxWidth\\": 650,
                  },
                ]
              }
              testID=\\"button-title\\"
-             textColor=\\"#626262\\"
+             textColor=\\"#ffffff\\"
            >
              Se connecter
            </Text>
          </View>
          <View"
`;

exports[`<Login/> should show error message and error inputs WHEN signin has failed because of network failure 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -165,10 +165,58 @@
                </Text>
              </View>
            </View>
          </View>
          <View
+           numberOfSpaces={5}
+           style={
+             Array [
+               Object {
+                 \\"height\\": 20,
+               },
+             ]
+           }
+           testID=\\"input-error-top-spacer\\"
+         />
+         <View
+           style={
+             Array [
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"flexDirection\\": \\"row\\",
+                 \\"maxWidth\\": 500,
+               },
+             ]
+           }
+         >
+           <View
+             height={24}
+             testID=\\"rule-icon-warn\\"
+             width={24}
+           >
+             <Text>
+               rule-icon-warn-SVG-Mock
+             </Text>
+           </View>
+           <Text
+             color=\\"#b60025\\"
+             style={
+               Array [
+                 Object {
+                   \\"color\\": \\"#b60025\\",
+                   \\"fontFamily\\": \\"Montserrat-SemiBold\\",
+                   \\"fontSize\\": 12,
+                   \\"lineHeight\\": 16,
+                   \\"paddingLeft\\": 4,
+                 },
+               ]
+             }
+           >
+             Erreur réseau. Tu peux réessayer une fois la connexion réétablie.
+           </Text>
+         </View>
+         <View
            numberOfSpaces={7}
            style={
              Array [
                Object {
                  \\"height\\": 28,
@@ -212,18 +260,18 @@
                  },
                ]
              }
            />
            <View
-             isError={false}
+             isError={true}
              isFocus={false}
              style={
                Array [
                  Object {
                    \\"alignItems\\": \\"center\\",
                    \\"backgroundColor\\": \\"#ffffff\\",
-                   \\"borderColor\\": \\"#c7c7cc\\",
+                   \\"borderColor\\": \\"#b60025\\",
                    \\"borderRadius\\": 22,
                    \\"borderStyle\\": \\"solid\\",
                    \\"borderWidth\\": 1,
                    \\"flexDirection\\": \\"row\\",
                    \\"height\\": 40,
@@ -321,18 +369,18 @@
                  },
                ]
              }
            />
            <View
-             isError={false}
+             isError={true}
              isFocus={false}
              style={
                Array [
                  Object {
                    \\"alignItems\\": \\"center\\",
                    \\"backgroundColor\\": \\"#ffffff\\",
-                   \\"borderColor\\": \\"#c7c7cc\\",
+                   \\"borderColor\\": \\"#b60025\\",
                    \\"borderRadius\\": 22,
                    \\"borderStyle\\": \\"solid\\",
                    \\"borderWidth\\": 1,
                    \\"flexDirection\\": \\"row\\",
                    \\"height\\": 40,"
`;

exports[`<Login/> should show error message and error inputs WHEN signin has failed because of wrong credentials 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -165,10 +165,58 @@
                </Text>
              </View>
            </View>
          </View>
          <View
+           numberOfSpaces={5}
+           style={
+             Array [
+               Object {
+                 \\"height\\": 20,
+               },
+             ]
+           }
+           testID=\\"input-error-top-spacer\\"
+         />
+         <View
+           style={
+             Array [
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"flexDirection\\": \\"row\\",
+                 \\"maxWidth\\": 500,
+               },
+             ]
+           }
+         >
+           <View
+             height={24}
+             testID=\\"rule-icon-warn\\"
+             width={24}
+           >
+             <Text>
+               rule-icon-warn-SVG-Mock
+             </Text>
+           </View>
+           <Text
+             color=\\"#b60025\\"
+             style={
+               Array [
+                 Object {
+                   \\"color\\": \\"#b60025\\",
+                   \\"fontFamily\\": \\"Montserrat-SemiBold\\",
+                   \\"fontSize\\": 12,
+                   \\"lineHeight\\": 16,
+                   \\"paddingLeft\\": 4,
+                 },
+               ]
+             }
+           >
+             E-mail ou mot de passe incorrect.
+           </Text>
+         </View>
+         <View
            numberOfSpaces={7}
            style={
              Array [
                Object {
                  \\"height\\": 28,
@@ -212,18 +260,18 @@
                  },
                ]
              }
            />
            <View
-             isError={false}
+             isError={true}
              isFocus={false}
              style={
                Array [
                  Object {
                    \\"alignItems\\": \\"center\\",
                    \\"backgroundColor\\": \\"#ffffff\\",
-                   \\"borderColor\\": \\"#c7c7cc\\",
+                   \\"borderColor\\": \\"#b60025\\",
                    \\"borderRadius\\": 22,
                    \\"borderStyle\\": \\"solid\\",
                    \\"borderWidth\\": 1,
                    \\"flexDirection\\": \\"row\\",
                    \\"height\\": 40,
@@ -321,18 +369,18 @@
                  },
                ]
              }
            />
            <View
-             isError={false}
+             isError={true}
              isFocus={false}
              style={
                Array [
                  Object {
                    \\"alignItems\\": \\"center\\",
                    \\"backgroundColor\\": \\"#ffffff\\",
-                   \\"borderColor\\": \\"#c7c7cc\\",
+                   \\"borderColor\\": \\"#b60025\\",
                    \\"borderRadius\\": 22,
                    \\"borderStyle\\": \\"solid\\",
                    \\"borderWidth\\": 1,
                    \\"flexDirection\\": \\"row\\",
                    \\"height\\": 40,"
`;
